DOC: Changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -97,7 +97,8 @@ V0000
     в темплейте превратится в {L_tech[401]}. Поддерживаются  так  же  строковые
     индексы массивов
 [~] Движок/Интерфейс: Написана с нуля библиотека таймеров js/sn_timer.js. Формат
-    и примеры использования - см. в файле библиотеки
+    и примеры использования - см. в файле библиотеки и
+    includes/functions/int_buildCounter.php
 [~] Другие изменения в движке
 
 [%] Множество мелких багфиксов и исправлений
