SYS: Switching to use 'planets' table instead of 'galaxy' table everywhere

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -99,6 +99,10 @@ V0000
 [~] Движок/Интерфейс: Написана с нуля библиотека таймеров js/sn_timer.js. Формат
     и примеры использования - см. в файле библиотеки и
     includes/functions/int_buildCounter.php
+[~] Движок:  Таблица  'lunas'  больше  не  используется.  Вся  функциональность
+    перенесена в таблицу 'planets'
+[~] Движок: Таблица  'galaxy'  больше  не  используется.  Вся  функциональность
+    перенесена в таблицу 'planets'
 [~] Другие изменения в движке
 
 [%] Множество мелких багфиксов и исправлений
