INT: Resources: Page optimized by view, code, template. Added ability to change production for all structures at once

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -78,6 +78,9 @@ V0000
 [@] Чат: сообщения админа теперь выделяются пурпурным цветом, что  бы  выделить
     их среди сообщений обычных пользователей
 [@] Интерфейс: Изменены темплейты страницы регистрации и логина
+[@] Интерфейс/Ресурсы:  оптимизирована  страница;   убрана   ненужная   строка
+    заполненности  хранилищ  (их  всегда  видно  в  верхней  строке   статуса);
+    добавлена возможность изменить производство сразу для всех заводов
 [@] Другие усовершенствования
 
 [~] Движок: Корректное отображение количества пользователей
