INT: Overview: List of flying fleets full rewrite

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -68,6 +68,13 @@ V0000
     6. Количество занятых и свободных секторов вынес на индикатор заполненности
        планеты
     7. Все статусы теперь используют новую библиотеку таймеров sn_timer.js
+    8. Изображения  планет  теперь  имеют  иконки,  если  на  планете  ведется
+       какое-либо строительство или исследование
+    9. Изображение планет теперь имеют индикатор застройки (полоса в самом низу
+       изображения)
+   10. Переделан список флотов в  полете.  Теперь  они  представляются  в  виде
+       таблицы и имеют два раздела: флоты, летящие на текущую планету и  флоты,
+       летящие на другие планеты
     В целом, экран обзора стал компактнее и информативнее
 [@] Интерфейс/Строительство: На  странице  строительства  видны  боевые  данные
     кораблей и обороны (броня/щиты/оружие)
