INT: Overview: List of flying fleets now has missile attack event

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -74,7 +74,7 @@ V0000
        изображения)
    10. Переделан список флотов в  полете.  Теперь  они  представляются  в  виде
        таблицы и имеют два раздела: флоты, летящие на текущую планету и  флоты,
-       летящие на другие планеты
+       летящие на другие планеты. Так же показываются ракетные атаки в полете
     В целом, экран обзора стал компактнее и информативнее
 [@] Интерфейс/Строительство: На  странице  строительства  видны  боевые  данные
     кораблей и обороны (броня/щиты/оружие)
@@ -123,6 +123,8 @@ V0000
     всем по списку
 
 V?
+[?] Возможность взрывать свои ракеты в полете
+[?] Возможность удалять ракеты из ракетной шахты
 [?] Скрипт инсталляции
 [?] Удалить поле `current_luna` из таблицы `users`
 [?] Удалить таблицу `lunas`
