DOC: Changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -115,6 +115,9 @@ V0000
     перенесена в таблицу 'planets'
 [~] Другие изменения в движке
 
+[%] Движок: Исправлен  глюк,  не  отображавший  несколько  летящих  на  планету
+    флотов, если их время прибытия было одинаковое. В частности, это  позволяло
+    скрывать все флоты САБа, кроме последнего
 [%] Множество мелких багфиксов и исправлений
 
 [?] Отрицательные ресурсы при отправке флота со страницы  галактики  -  _errors
