SYS: updated supernova.sql to reflect changes in DB

--- a/docs/install.txt
+++ b/docs/install.txt
@@ -2,7 +2,11 @@
   MySQL 5.x
   PHP >= 5.2.х
   Web-server
-  (опционально, но крайне желательно) XCache >= 1.2.х
+  XCache >= 1.2.х - опционально, но крайне, крайне желательно.  Без  XCache  не
+                    будут работать некоторые фишки и заметно возрастет нагрузка
+                    на MySQL.
+Для  работы  подсистемы  автоматического  апдейта  и   подсистемы   кэширования
+темплейтов должна быть разрешена запись на диск аккаунту веб-сервера
 
 Данные инструкции предполагают умение самостоятельно настроить или использовать
 сторонний  веб-хостинг,  знакомство  с  MySQL  и  PHP,  доступ  к  инструментам
