SYS: Changed SQL-login script

--- a/docs/install.txt
+++ b/docs/install.txt
@@ -26,7 +26,7 @@
   7. В файле config.php в строке
      "secretword" => "SUPERNOVA",      // Ключевое слово для создания Cookies. (Не забудьте изменить на своё!)
      замените SUPERNOVA какой-либо последовательностью символов
-  8. Зайдите в игру с админскими правами. По умолчанию админский  логин  пароль
+  8. Зайдите в игру с админскими правами. По умолчанию админский  логин/пароль
      admin/admin
  10. Смените пароль администратора на странице /options.php
  11. Настройте игру на странице /admin/settings.php
