MISC: Added some text info. Added more ignores to .gitignore to streamline commit process

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -126,42 +126,26 @@ V0000
     всем по списку
 
 V?
-[?] Возможность взрывать свои ракеты в полете
-[?] Возможность удалять ракеты из ракетной шахты
-[?] Скрипт инсталляции
 [?] Удалить поле `current_luna` из таблицы `users`
-[?] Удалить таблицу `lunas`
-[?] Интеграция с phpBB3
-[?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через
-    глобальные переменные $_POST
-[?] Код сохранения конфигурации
-[?] Ракеты: использовать таблиц флотов
-[?] Экпедиции - поставить зависимость ТМ от емкости трюма кораблей
-[?] Супернова: Удержание на обломках
-[?] Супернова: Сбор ресурсов флотом, если есть разработчики
 [?] Кэширование чата (XCache). Сброс 10 последних одним инсертом.
 [?] Чат: Интеграция AJAX Chat
 [?]  Админка/Список  ошибок:  добавить  листание  -  PHP  умирает  при  большом
     количестве ошибок - выдает белую страницу
 [?] Интерфейс: Капча - captcha.php
-[?] Боевка: Движок совместимый с oGame (скорострел)
 [?] Переработать систему оружия и боя: ракеты, кинетическое, энергетическое
 [?] Разобраться в менеджере и подпроцедурах управления флотами, что бы избежать
     двойных проверок.  Возврат  флотов  должен  производиться  исключительно  в
     менеджере флотов. Там же так же исключительно должны производиться проверки
     на то, следует ли передавать флот дальше в подпроцедуры обработки
 [?] BE_attackFleetFill.php: Нужна ли полная информация о флотах?
-[?] Интерфейс: informations.php - выводить информацию о сервере: скорости итд
-[?] Черный рынок: Банкир  и  Ростовщик.  Банкир  позволяет  вложить  денег  под
-    отрицательный процент. Ростовщик - занять денег.
-[?] Перки
-[?] Расы
-[?] Темная Энергия и Артефакты
-[?] Губернаторы + офицеры => наемники
 [?] Интерфейс: позаменять везде 'd/m/Y h:i:s' на прописанное в конфиге
-[?] Движок: functions/PadaGalaxy.php - пересмотреть код
 [?] Движок: объединить DefensesBuildingPage.php и FleetBuildingPage.php
 [?] Не работает константа HIDE_1st_FROM_STATS - должна скрывать юзера 1 (админов?)
+[?] Кэширование чата (XCache). Сброс 10 последних одним инсертом.
+[?] Интерфейс: отдельная таблица для текстовых материалов с поддержкой BBCode
+[?] Интерфейс: credit.php
+[?] Интерфейс: darkmatter.php - templatize!
+[?] Интерфейс: changelog.php - add changelogs
 [?] Движок: Почистить каталог language
 [?] Движок: Почистить каталог scripts
 [?] Движок: Почистить каталог templates
@@ -169,18 +153,12 @@ V?
 [?] Движок: Почистить каталог includes
 [?] Движок: fleetback.php -> fleet.php
 [?] Движок: infos.php - разбить на подпроцедуры
-[?] Движок: fleet.php - переписать
 [?] Интерфейс, RPG: Make empire work only with Emperor
-[?] Интерфейс: отдельная таблица для текстовых материалов с поддержкой BBCode
-[?] Интерфейс: credit.php
-[?] Интерфейс: darkmatter.php - templatize!
-[?] Интерфейс: changelog.php - add changelogs
+[?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через глобальные переменные $_POST
 [?] using phpBB3 for everything (^_^) - custom page
     http://www.phpbb.com/kb/article/add-a-new-custom-page-to-phpbb/
     looks like updated version of upper page:
     http://wiki.phpbb.com/display/MODDOCS/Practical.Add+custom+page
 [?] using php 5.0+ embedded Database Object
     http://ua2.php.net/manual/en/pdo.connections.php
-[?] Поддержка мультивселенных
-[?] Скин для ПДА
 [?] Модульная система
