DOC: Changed install.txt a bit

--- a/docs/install.txt
+++ b/docs/install.txt
@@ -13,6 +13,15 @@
 управленя MySQL и  хостингом.  Если  вы  не  обладаете  опытом  самостоятельной
 настройки сайтов - этот дистрибутив вам не подойдет
 
+ВНИМАНИЕ! Я не могу протестировать все возможные комбинации и  версии  MySQL  &
+PHP & XCache & веб-серверов! Это означает,  что  при  некоторых  комбинациях  и
+настройках среды движок может  не  работать.  Именно  для  этого  нужны  навыки
+настройки и конфигурации веб-серверов.
+Движок разрабатывается под Windows + Apache Friends XAMPP Lite (Basis  Package)
+version 1.7.3 (включен только Apache+PHP+XCache и MySQL). Продакшн крутится под
+CentOS + lighttpd.
+На localhost движок ВСЕГДА работает в режиме display_errors=1
+
 Инсталляция, базовый вариант:
   1. Создайте БД "supernova" в UTF-8
   2. Создайте в MySQL пользователя "supernova_user"
