DOC: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -19,6 +19,8 @@
     оброняющегося
 
 2010-10-13 00:44
+[@] Сммулятор:  почти  полностью  переписан.  Нетронутым  остался  только  код
+    генерации отчета
 [@] Симулятор: simulator.tpl теперь использует возможности PTE
 [@] Симулятор: Новая система генерации REPLAY-линка
 
