DOC: changelog.txt editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,7 +10,7 @@
  [*] ToDo - см. changelog.todo
 
 2010-10-15 03:47
-[#] Флот/Вселенная: На обломках показывается также общее количество ресурсов
+[#] Вселенная: На обломках показывается также общее количество ресурсов
 
 2010-10-15 03:02
 [#] Флот/Страница0: Добавлено цветовое кодирование  в  список  флотов.
