SYS: Ridding of extension.inc file. Part 1

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,6 +11,7 @@
 
 2010-10-17 18:36
 [~] init.inc переименован в init.php
+[%] Исправил работу старой ссылки на баннер /scripts/createbanner.php
 
 2010-10-17 02:44
 [%] Кажется, исправлена ошибка с очень редким неначислением ресурсов
