DOC: changelog.txt editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,9 +10,9 @@
  [*] ToDo - см. changelog.todo
 
 2010-10-18 04:37
-[#] ¬селенна€: на иконке  планеты  теперь  отображаетс€  индикатор  прилетающих
-    флотов.  ¬  попапе  привод€тс€  подробные  сведени€  о   сумарном   составе
-    прибывающих кораблей и ресурсов у них на борту
+[#] ¬селенна€: на  иконках  всех  планет,  включа€  чужие  теперь  отображаетс€
+    индикатор прилетающих флотов. ¬  попапе  привод€тс€  подробные  сведени€  о
+    сумарном составе прибывающих кораблей и ресурсов у них на борту
 
 2010-10-18 01:28
 [#] ¬селенна€:  на  иконке  обломков  отображаетс€  количество  переработчиков
