DOC: changelog.txt editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 2010-10-20 22:19
 [%] Исправлена неправильная работа страниц  статистики,  списка  банов,  списка
-    контаков сервера, списка настроей для залогиненных пользователей
+    контаков сервера, списка настроек для залогиненных пользователей
 
 2010-10-20 21:55
 [!] Полностью переписан код страниц логина и регистрации
