DOC: changelog.txt editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,6 +10,8 @@
  [*] ToDo - см. changelog.todo
 
 2010-10-20 22:19
+[~] Страницы статистики, списка банов, списка контаков сервера, списка настроек
+    доступны для просмотра находящимся в отпуске или забаненных
 [%] Исправлена неправильная работа страниц  статистики,  списка  банов,  списка
     контаков сервера, списка настроек для залогиненных пользователей
 
