DOC: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -331,10 +331,12 @@
     появляется статус "Обновленно"
 
 2010-10-08 12:34
-[~] Немного изменен алгоритм расчета возврата защиты  на  планете.  Теперь  при
-    начальном количестве защитных сооружений  меньше  10,  шанс  восстановления
-    кидается для КАЖДОГО  сооружения.  Для  особых  тугодумов  -  теперь  МОЖНО
-    уничтожить защитные купола и ПЗ
+[~] Немного изменен алгоритм расчета  восстановления  защитных  сооружений  при
+    атаке. Теперь  при  количестве  сооружений  одного  типа  меньше  10,  шанс
+    восстановления кидается для КАЖДОГО сооружения  этого  типа  отдельно.  Для
+    особых тугодумов - теперь МОЖНО уничтожить защитные купола  и  ПЗ.  Это  НЕ
+    является изменением, а  лишь  исправление  ошибки,  когда  невозможно  было
+    уничтожить атаками всю защиту до конца
 [#] Немного изменен новый экран постройки зданий
 
 2010-10-04 01:43
