DOC: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -19,6 +19,9 @@
     умолчанию 5) - указывает во сколько раз должны отличатс€ очки  игрока,  что
     бы дл€ противника он был нубом. “.е. игрок с 10000 очков  будет  нубом  дл€
     игроков от 50000 очков.
+[~] »з кода убрано пон€тие "сильный игрок" - нуб может атаковать  кого  угодно.
+    ќбозначение во ¬селенной сильных игроков осталось, но ограничение на  атаку
+    сн€то
 [%] »справлена ошибка, позвол€юща€ атаковать ракетами нубов
 [%] »справлена ошибка, позвол€юща€ атаковать ракетами отпусников
 
