--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,7 +10,7 @@
  [*] ToDo - см. changelog.todo
 
 2010-10-25 01:59
-[%] Инфо/Юниты: На странице  информации  о  защитных  сооружения  броня  теперь
+[%] Инфо/Защита: На странице информации  о  защитных  сооружения  броня  теперь
     показывается правильно, а не завышенная в 10 раз
 
 2010-10-25 00:42
