FIX-UNI: Fixed recyclers sent to planet instead of debris

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -15,6 +15,8 @@
 [~] Увеличена точность простых счетчиков. Это должно уменьшить рассинхронизацию
     между сервером и клиентом. Например - ресурсы будут идти точнее
 [~] Разница времени между сервером и клиентом теперь определяются JS-запросом
+[%] Вселенная:  Исправлена  ошибка   отсылки   переработчиков:   переработчики
+    отправлялись на планету, а не на луну
 
 2010-10-26 00:42
 [~] Сообщения: Перекрашены сообщения.  Цвета  заголовков  теперь  соответствуют
