DOC: changelog.txt editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -21,7 +21,7 @@
     даже при возврате на страницу кнопкой "Back" браузера
 [~] Увеличена точность простых счетчиков. Это должно уменьшить рассинхронизацию
     между сервером и клиентом. Например - ресурсы будут идти точнее
-[~] Разница времени между сервером и клиентом теперь определяются JS-запросом
+[~] Разница времени между сервером и клиентом теперь определяются AJAX-запросом
 [%] Вселенная:  Исправлена  ошибка   отсылки   переработчиков:   переработчики
     отправлялись на планету, а не на луну
 
