Updated readme.txt to reflect changes in the game

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -14,6 +14,7 @@
     текущее)
 [*] Добавить общее время строительства к индикации очереди
 [*] Транзакционность и блокируемость очереди построек!
+[*] Добавить в симулятор поддержку Адмирала
 
 [*] В целях защиты сервера возможность  для  членов  команды  (authlevel  >  0)
     сбрасывать пароль через эту страницу заблокирована
