DOC: Editing changelog.txt

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -39,6 +39,14 @@
 
 [~] Вернуть на страницу 2 флота возможность выбирать тип атаки при выборе САБа
 
+[*] Просмотреть все файлы на предмет изменения переменной planet['last_update']
+    и добавить вызов функции обновления очереди
+
+[*] Добавить блокировку таблиц и транзакции в update.php
+
+[*] На странице инфо для структур учитывать текущих офицеров (?)  и  технологии
+    (??) - для электростанции производство точно нужно
+
 2011-01-15 17:53
 [~] Экономика: Теперь нельзя ставить в очередь занятые  здания  (лаборатории  -
     при текущем исследовании, верфь - при постройке кораблей или  защиты).  Так
