DOC: Changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,6 +9,8 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
+[+] Штурмовик. Поставить в пререквисты 5 уровней Конструктора
+
 2011-01-15 22:22 Ребалансировка офицеров
 [!]  Перебалансированы  офицеры.  Характеристики  чуть-чуть  изменены.  Кое-где
      добавлены дополнительные уровни. Основное новвоведение -  офицеры  разбиты
