DOC: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -21,8 +21,9 @@
      ветка  начинается  с  Геолога  и   включает   Энергетика,   Карго-мастера,
      Архитектора,  Шпиона,  Координатора.  "Атакерская"  ветка   начинается   с
      Адмирала  и  включает  Конструктора,  Академик,  Фортификатор,  Защитника,
-     Навигатора.  Открытие  второго  офицера  ветке  стоит  5  ТМ,  а   каждого
-     следующего - 10 ТМ.
+     Навигатора. Открытие второго офицера в ветке  требует  5  уровней  первого
+     офицера, а каждого - следующего - по 5 уровней двух предыдущих (каждый раз
+     пары разные).
      Топ-офицеры Разрушитель и Ассасин кроме полного  открытия  своей  подветки
      ("шахтерской" и "атакерской"  соответственно)  требуют  открытия  соседней
      ветки примерно до половины
