DOC: Changed docs/html/developers.html

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,9 +9,10 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-[+] Штурмовик. Поставить в пререквисты 5 уровней Конструктора
 [+] Project "SuperNova.WS" Release 25.1
+[+] Штурмовик. Поставить в пререквисты 5 уровней Конструктора
 [%] Не работает noipcheck
+[+] Project "SuperNova.WS" Release 25
 
 2011-01-19 01:26 V25beta2
 [+] Свезти ресурсы: Теперь в форме выбора планет видно количество  ресурсов  на
