doc: Editing changelog

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -14,7 +14,9 @@
 [+] Штурмовик. Поставить в пререквисты 5 уровней Конструктора
 
 2011-01-20 15:05
-[!] Унифицированы алгоритмы и файлы постройки флота и защиты
+[!] Унифицированы алгоритмы и  файлы  постройки  флота  и  защиты.  Это  должно
+    полностью снять  проблемы  с  отрицательными  ресурсами  после  верфи  и  с
+    постройкой лишних единиц флота/защиты на верфях
 [№] Теперь при отмене очереди на верфи открывается та же страница верфи
 
 2011-01-20 12:24 Project "SuperNova.WS" Release 25
