doc: Editing changelog

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -14,6 +14,7 @@
     БД.  Среди  параметров  -  ИД  мисси,  тип  точки  назначения,  должна   ли
     существовать итд
 
+[+] Миссия "Диверсия": взорвать часть защиты противника
 [+] Миссия "Саботаж": отключить производство на планете :)
 [+] Миссия "Украсть": забрать ресурсы с планеты
 [+] Project "SuperNova.WS" Release 26
