work-SYS: Now when server is disabled admin can't use user interface too to prevent incendental corruption of DB

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,16 +9,16 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Шпионаж и атака шпионскими зондами не попадают под действие правила о башинге.
-Комбинированные флоты (те, в состав которых  входят  не  только  шпионы)  также
-можно отсылать с заданием шпионаж. В случае  обнаружения  такого  флота,  он  в
-полном составе вступает в бой.
+[*] Шпионаж и атака шпионскими зондами не попадают под действие правила о башинге.
+[*] Комбинированные флоты (те, в состав которых входят не только шпионы)  также
+    можно отсылать с заданием шпионаж. В случае обнаружения такого флота, он  в
+    полном составе вступает в бой.
 
 [%] Не работает noipcheck
 [+] Штурмовик. Поставить в пререквисты 5 уровней Конструктора
 [@] Перекинуть ракеты в таблицу флотов
 [@] Добавить поля fleet_start_id и fleet_end_id - ID соответствующих планет
-[@] Все таблицы из MyISAM переконвертировать в InnoDB
+[@] Все таблицы из MyISAM переконвертировать в InnoDB ALTER TABLE engine=innodb;
 [*] Перенести таблицу /templates в /design
 [*] Добавить в очередь  настройку  BUILD_DELAY  -  вычет  ресурсов  только  при
     активизации строений
@@ -40,13 +40,18 @@
 [@] Слить таблицы lh_logs и lh_errors в logs. Переделать  logs.  Добавить  поле
     для  machine-readable  данных.  Туда   будет   записываться   данные   типа
     "имя_таблицы,serialize(таблица);"
-ALTER TABLE engine=innodb;
 If you want to re-number rows, and there are no dependencies, you can DROP  and
 then ADD the id column, and it will assign numbers  automatically,  and  remove
 any gaps in the sequence.
+-------------------------------------------------------------------------------
+Текущий билд
+
+[~] Теперь админ тоже не может  ходить  по  клиентской  части  при  отключенном
+    сервере во избежание порчи БД при бэкапе
 
 2011-01-26 19:03 v26a8
-[+] Полностью переписана работа алгоритма миссии "Шпионаж"
+[+] Полностью переписана работа алгоритма миссии  "Шпионаж".  От  старого  кода
+    осталась только генерация рапорта
 [@] Все небоевые миссии теперь используют на входе кэшированные данные
 
 2011-01-26 01:45
