fix-ALI: Fixed wrong table name in update ally players query

--- a/docs/install.txt
+++ b/docs/install.txt
@@ -20,6 +20,7 @@ Disclaimer aka Отмазка
 Код распространяется под лицензией GNU GENERAL PUBLIC  LICENSE  Version  2,
 June 1991. Сама лицензия находится в файле docs/license.txt дистрибутива.
 
+
 Предуведомления о необходимости наличия квалификации
 ====================================================
 Данные инструкции предполагают умение самостоятельно настроить или использовать
@@ -31,6 +32,7 @@ June 1991. Сама лицензия находится в файле docs/license.txt дистрибутива.
 PHP & XCache & веб-серверов! Это означает,  что  при  некоторых  комбинациях  и
 настройках среды движок может  не  работать.  Именно  для  этого  нужны  навыки
 настройки и конфигурации веб-серверов.
+
 
 Требования
 ==========
@@ -46,6 +48,7 @@ version 1.7.3 (включен только Apache+PHP+XCache и MySQL). Продакшн крутится под
 CentOS + lighttpd + XCache.
 На localhost движок ВСЕГДА работает в режиме display_errors=1
 
+
 Расположение движка
 ===================
 В настоящий момент движок может работать только из  корневого  каталога  домена
@@ -54,6 +57,7 @@ CentOS + lighttpd + XCache.
   http://my.very.deep.domain.on.crappy.hoster.org
 но не может быть установлен по адресу
   http://hosting.com/ogame/
+
 
 Права доступа веб-сервера
 =========================
@@ -66,6 +70,7 @@ CentOS + lighttpd + XCache.
 [*] Для работы подсистемы защиты от взлома  аккаунту  веб-сервера  должна  быть
     разрешена запись на диск в файл /badqrys.txt. Без этого "плохие" запросы не
     будут сохранятся
+
 
 Краткий ликбез по GIT
 =====================
@@ -97,6 +102,7 @@ git pull
 локальной копии:
 git reset --hard
 
+
 Пользовательские модификации
 ============================
 Если  вы  используете  свой  скин,  темплейт  или  локализацию,  НЕ   ИЗМЕНЯЙТЕ
@@ -104,6 +110,37 @@ git reset --hard
 дополнения! Сделайте копию скина/темплейта/локализации под другим именем и  уже
 с копией веселитесь. Изменить скин/темплейт/локализацию по умолчанию  можно  на
 странице конфигурации сервера.
+
+
+Инсталляция, настройки БД
+=========================
+ВНИМАНИЕ! Почти все таблицы СН хранятся в формате InnoDB! По умолчанию MySQL НЕ
+НАСТРОЕН на нормальную работу с базами InnoDB! Дефолтных настроек MySQL  хватит
+на работу до 50 пользователей онлайн. Если  вы  планируете  большее  количество
+одновременных игроков, то вам нужно настроить  MySQL  в  соответствии  с  вашим
+сервером.
+В качестве ПРИМЕРА привожу настройки MySQL своего сервера (2Гб  памяти,  сервер
+выделен исключительно для работы СН и поддерживающего форума)
+
+innodb_additional_mem_pool_size 20971520
+innodb_buffer_pool_size         536870912
+innodb_flush_log_at_trx_commit  0
+innodb_flush_method             O_DIRECT
+innodb_log_buffer_size          8388608
+
+Особо обращаю внимания на переменную innodb_flush_log_at_trx_commit!
+
+
+Инсталляция, настройки веб-сервера
+==================================
+СН рассчитана на  использования  кэшера  оп-кодов  xCache.  Хотя  движок  может
+работать и без него, этот  режим  не  является  штатным.  Без  кэшера  оп-кодов
+некоторые возможности движка будут заблокированы, а так же  возрастет  нагрузка
+на MySQL.
+Как и любой кэшер оп-кодов, xCache нуждается в особых  настройках  веб-сервера.
+Как правильно настроить веб-сервер для работы с xCache можно узнать в интернете
+(www.google.com) и на домашней  странице  xCache  (http://xcache.lighttpd.net/)
+
 
 Инсталляция, базовый вариант
 ============================
@@ -126,6 +163,7 @@ git reset --hard
 10. Настройте игру на странице /admin/settings.php
 11. Сверхновая готова к запуску!
 
+
 Инсталляция, продвинутый вариант
 ================================
 Настройки доступа к БД находятся в файле /config.php
@@ -134,8 +172,9 @@ git reset --hard
 Так же некоторые настройки игры хранятся в файле /includes/constants.php
 Все изменения - на ваш страх и риск
 
-Апгрейд
-=======
+
+Апгрейд с RR
+============
 Автоматический апгрейд с баз RR в  разработке.  Частично  апгрейд  производится
 автоматически запуском файла update.php
 
