doc: changelog & developer editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -28,7 +28,7 @@ Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
     процессе  разработки  новой  версии  вносятся  в   changelog_dev.txt.   При
     подготовке релиза в changelog.txt переносятся только  финальные  изменения
 
-[+] Свезти ресурсы: Теперь можно отдельно выбирать типы ресурсы, которые  нужно
+[+] Свезти ресурсы: Теперь можно отдельно выбирать типы ресурсов, которые нужно
     свезти
 [+] Свезти ресурсы: Добавлены колонки "ВСЕГО" - общее  количество  ресурсов  на
     планете и "Трюмы" - общая грузоподъемность транспортного флота  с  цветовым
@@ -47,8 +47,8 @@ Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
     указанный при регистрации
 [~] Автологин стал более параноидальным. Это позволило  избавиться  от  большей
     части ошибок
-[~] Настройки: При попытке уйти в отпуск теперь выдается отдельное  сообщение  при
-    летящих флотах и отдельное сообщение при постройке на планетах
+[~] Настройки: При попытке уйти в отпуск теперь  выдается  отдельное  сообщение
+    при летящих флотах и отдельное сообщение при постройке на планетах
 
 [#] Черный Рынок: Торговец ресурсами - Добавлена защита от повторного обмена
 [#] Сообщения: В навбаре теперь дополнительно отображаются количество сообщений
@@ -94,13 +94,13 @@ Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
 [%] Вселенная: Исправлена ошибка неотображения названий планет с символов "'"
 [%] Своз ресурсов: перед свозом ресурсов не пересчитывались данные  о  ресурсах
     на планетах, поэтому свозилось количество ресурсов меньшее, чем могло
-[%] Сообщения:  Теперь  при  появлении   нового   сообщения   у   пользоватея,
-    отправленного ему игрой (возвращение флота, шпионаж, отчеты  переработчиков
-    итд), счетчик сообщений реагирует сразу, а не после обновления страницы
+[%] Сообщения:  Теперь   при   появлении   нового   внутриигрового   сообщения
+    (возвращение флота, шпионаж, отчеты переработчиков итд), счетчик  сообщений
+    реагирует сразу, а не после обновления страницы
 
 [@] Версия БД увеличена до 26. Обновленный дамп
 [@] Теперь админ тоже не может  ходить  по  клиентской  части  при  отключенном
-    сервере во избежание порчи БД при бэкапе
+    сервере во избежание порчи БД при бэкапе или апгрейде
 [@] Таблица  `errors`  влита  в   `logs`.   Новая   таблице   переформирована:
     добавлены новые  и  переупорядочены  старые  поля  для  удобства  просмотра
     человеком; добавлено поле с  дампом  переменных  для  дальнейшего  разбора.
