misc-SYS: Now it is possible to disable noob protection subsystem with config value

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,6 +12,16 @@
 Следующий релиз
 ===============
 
+[~] SQL: По умолчанию в дампе счетчик посещений - отключен, а игра - включена
+
+[%] Исследования: Теперь невозможно исследовать технологии во  время  постройки
+    лаборатории или нанолаборатории
+[%] Вселенная: Исправлена ошибка  с  неправильной  ссылкой  на  экспедицию  при
+    количестве планет в системе не равном 15
+
+[@] Теперь можно отключить защиту слабых игроков, сбросив game_noob_factor в 0
+[@] Исправлено несколько участков кода, выдающих предупреждения в логи
+
 Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
 ===================================================================
 
