--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V26e6
+Следующий релиз V26e7
 =====================
 
 [!] Интерфейс: Разнесены по разным страницам  отправка  флота  и  информация  о
@@ -35,6 +35,11 @@
 [@] Теперь можно отключить защиту слабых игроков, сбросив game_noob_factor в 0
 [@] Исправлено несколько участков кода, выдающих предупреждения в логи
 [@] Убрана запись сообщения в логи о постройке ПЗ/отмене очереди верфи
+[@] Чат: Изменилось выделение сообщеник команды сервера. Теперь выделяется  ник
+    и  в  сообщениях  можно  использовать  все  стандартные  цвета.  Переменная
+    конфигурации     chat_admin_msgFormat      заменена      на      переменную
+    chat_admin_highlight. В ней можно использовать  HTML  коды.  Место  вставки
+    ника обозначается как '$1' - см. пример в БД
 
 
 Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
