fix-FLT: Fixed error making ACS when there is maximum of fleet flying

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -30,6 +30,7 @@
 [%] Флот: Добавлена проверка на корректное время Экспедиций и Удержания
 [%] Флот: Теперь корректно выводится сообщени об ошибке при  попытке  отправить
     флот на несуществующую планету
+[%] Флот: исправлена ошибка создания САБа в случае, когда летит максимум флотов
 
 [@] SQL: По умолчанию в дампе счетчик посещений - отключен, а игра - включена
 [@] Теперь можно отключить защиту слабых игроков, сбросив game_noob_factor в 0
