misc-SYS: V26e9: Replaced all {{table}} with corresponding table names

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Следующий релиз V26e8
+Следующий релиз V26e9
 =====================
 
 [!] Интерфейс: Разнесены по разным страницам  отправка  флота  и  информация  о
@@ -17,7 +17,7 @@
     раздела "Планета", а информация о летящих флотах доступна через пункт  меню
     "Флоты в полете" раздела "Империя"
 
-[@] Движок:  Теперь  СН  может  размещаться  на  веб-сервере  на  любом  уровне
+[!] Движок:  Теперь  СН  может  размещаться  на  веб-сервере  на  любом  уровне
     вложенности каталогов
 
 [~] Экономика/Ресурсы: По многочисленным просьбам добавлена колонка "В час"
@@ -44,6 +44,9 @@
     конфигурации     chat_admin_msgFormat      заменена      на      переменную
     chat_admin_highlight. В ней можно использовать  HTML  коды.  Место  вставки
     ника обозначается как '$1' - см. пример в БД
+[@] Изменена система слежения за  игроками.  Теперь  не  логгируются  неопасные
+    запросы (SELECT, START TRANSACTION,  COMMIT,  ROLLBACK).  При  логгировании
+    запроса так же записывается стандартный набор переменных
 
 
 Project "SuperNova.WS" Release 26 - Speed It Up! (2011-02-07 13:02)
